--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
     {
       "source": "/Build/(.*)",
       "headers": [
-        { "key": "Cache-Control", "value": "no-cache" }
+        { "key": "Cache-Control", "value": "no-cache, no-store, must-revalidate" }
       ]
     }
   ]
